# BioMetaDB

./: .gitignore  Makefile  README.md  __init__.py  dbdm.py  pyproject.toml  requirements.txt  setup.py
Accessories/: ArgParse.py  arg_parse.py  bio_ops.py  get.py  ops.py  program_caller.py  range_ops.py  tsv_join.py
BioMetaDB/: __init__.py  dbdm.py  requirements.txt  table  tsv-join
Config/: config_manager.py  directory_manager.py
DBClassManager/: class_manager.py  type_mapper.py
DBManagers/: __init__.py  class_manager.py  type_mapper.py  update_manager.py
DBOperations/: create_database.py  create_table.py  create_table_in_existing_database.py  dbdm.py  delete_from_table.py  remove_columns_from_table.py  remove_table_from_database.py  update_existing_table.py  update_table.py
DataStructures/: linked_list.pyx
Example/: README.md  columns_to_delete.list  plants.tsv  prokaryotes.tsv  prokaryotes_update.tsv  records_to_delete.list
Examples/: sample_data.tsv
Exceptions/: config_manager_exceptions.py  create_database_exceptions.py  directory_exceptions.py  error.py  get_exceptions.py  remove_columns_from_table_exceptions.py
Indexers/: index_extensions.py  index_mapper.py
Models/: functions.py  models.py
Parsers/: redundancy_checker.py
ReadMappers/: TOBG_read_mapper.py
Serializers/: checkm_result.py  count_table.py  counttable_dict.py  gtdbtk_output_parser.py  peptidase_summarizer.py  redundancy_output_parser.py
Visualizers/: grapher.py  xsv_to_heatmap.py
examples/: cols_to_remove.list  planctomycetes.py  quick.py  quick.tsv  update.tsv  (+1 more)
(+93 files in other folders)
